usecase3/blue-green-demo-route.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: blue-green-demo # The name of our route; appears in the URL to access the app
  namespace: default # The namespace we're working in; also appears in the URL to access the app
spec:
  traffic:
    - revisionName: blue-green-demo-qff6v ##### 取得したRevision名で更新 blue
      percent: 100
    # - revisionName: blue-green-demo-xv5kn # green
    #   percent: 0
    #   tag: v2
